--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "home",
   "author": "imsyy",
-  "github": "https://github.com/imsyy/home",
-  "home": "https://imsyy.top",
+  "github": "https://github.com//abcxiaobu",
+  "home": "https://www.200645.xyz",
   "private": true,
   "version": "4.1.4",
   "type": "module",
